--- a/portal/assets/styles/style.css
+++ b/portal/assets/styles/style.css
@@ -1,4 +1,43 @@
 body
 {
-    background-color: #7fddff;
+    background-color: #fff;
+    font-family:'EurostileExtended', Arial;
+}
+header{
+    height:70px;
+    width:100%;
+    background-color:#2e2d30;
+    left:0;
+    top:0;
+    position: absolute;
+}
+header > nav{
+    background-color:#2e2d30;
+    width:100%;
+    height:30%;
+}
+header > nav ul{
+    top: 7px;
+    width: 82%;
+    left:14%;
+    height: 30%;
+    position: absolute;
+}
+.navigation_list li{
+    font-size:20px;
+    color:#fff;
+    padding: 1% 3% 1% 3%;
+    display:inline;
+    background-color:#2e2d30;
+    border: 1px solid #2e2d30;
+    text-decoration: none;
+}
+.navigation_list a{
+    color:#fff;
+    text-decoration: none;
+}
+.navigation_list li:hover,
+.navigation_list li a:hover{
+    border: 1px solid #c7d308;
+    color:#c7d308;
 }
