--- a/portal/assets/styles/style.css
+++ b/portal/assets/styles/style.css
@@ -46,3 +46,13 @@ article{
     border: 1px solid #c7d308;
     color:#c7d308;
 }
+.hideCreateArticle,
+.hideChangeArticle,
+.hideSearchArticle{
+    display:none;
+}
+section#headerImage{
+    position: absolute;
+    left: 0;
+    top: 70px;
+}
