--- a/portal/assets/styles/article.css
+++ b/portal/assets/styles/article.css
@@ -26,7 +26,7 @@ header > nav ul{
 article{
     position: absolute;
     left: 20%;
-    /*top: 600px;*/
+    top: 600px;
 }
 .navigation_list li{
     font-size:20px;
@@ -49,22 +49,75 @@ article{
 .hideCreateArticle,
 .hideChangeArticle,
 .hideSearchArticle{
-    display:none;
+
 }
-section#headerImage img{
-    display: block;
-    margin: 70px auto 0 auto;
-    max-width: 800px;
-    width: 100%;
-
-    -webkit-box-shadow: 0px 5px 25px -3px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 5px 25px -3px rgba(0,0,0,0.75);
-    box-shadow: 0px 5px 25px -3px rgba(0,0,0,0.75);
-
-    border: 1px solid rgba(0,0,0,.5);
-    border-top: 0px;
+section#headerImage{
+    position: absolute;
+    left: 0;
+    top: 70px;
 }
 .article_description{
     overflow: hidden;
     width: 80%;
+}
+
+.article_creationTimestamp{
+    position: relative;
+    text-align: right;
+    top: -44px;
+    right: 200px;
+}
+section#headerImage img{
+    width:100%;
+}
+footer{
+    position: absolute;
+    bottom:0;
+    left:0;
+    width:100%;
+    height:50px;
+    background-color: #2e2d30;
+}
+
+div.tabs {
+    overflow: hidden;
+    background-color: #2e2d30;
+    padding:15px;
+}
+.tabs > a {
+    background-color: #2e2d30;
+    color: white;
+    text-decoration: none;
+    padding: 10px 10px 10px 10px;
+    text-align: center;
+    transition: 0.3s;
+    font-size: 17px;
+}
+.tabs > a:hover{
+    background-color: #424046;
+}
+/* Style the tab content */
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    -webkit-animation: fadeEffect 1s;
+    animation: fadeEffect 1s;
+}
+#articleOption_create,
+#articleOption_search,
+#articleOption_change
+{
+ border-right:1px solid white;
+}
+
+
+section#headerImage img
+
+{
+    display: block;
+    -webkit-box-shadow: 0px 5px 25px -3px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 5px 25px -3px rgba(0,0,0,0.75);
+    box-shadow: 0px 5px 25px -3px rgba(0,0,0,0.75);
+    border: 1px solid rgba(0,0,0,.5);
+    border-top: 0px;
 }
