--- a/portal/assets/styles/article.css
+++ b/portal/assets/styles/article.css
@@ -1,60 +1,17 @@
-body
-{
-    background-color: #fff;
-    font-family:'EurostileExtended', Arial;
-}
-header{
-    height:70px;
-    width:100%;
-    background-color:#2e2d30;
-    left:0;
-    top:0;
-    position: absolute;
-}
-header > nav{
-    background-color:#2e2d30;
-    width:100%;
-    height:30%;
-}
-header > nav ul{
-    top: 7px;
-    width: 82%;
-    left:14%;
-    height: 30%;
-    position: absolute;
-}
 article{
-    position: absolute;
-    left: 20%;
-    top: 600px;
+    position: relative;
+    width: 70%;
+    min-height: 100%;
+    text-align: left;
+    padding-left: 15%;
+    padding-top: 100px;
 }
-.navigation_list li{
-    font-size:20px;
-    color:#fff;
-    padding: 1% 3% 1% 3%;
-    display:inline;
-    background-color:#2e2d30;
-    border: 1px solid #2e2d30;
-    text-decoration: none;
-}
-.navigation_list a{
-    color:#fff;
-    text-decoration: none;
-}
-.navigation_list li:hover,
-.navigation_list li a:hover{
-    border: 1px solid #c7d308;
-    color:#c7d308;
-}
-.hideCreateArticle,
-.hideChangeArticle,
-.hideSearchArticle{
 
-}
 section#headerImage{
-    position: absolute;
-    left: 0;
+    position: relative;
     top: 70px;
+    width: 50%;
+    left: 0px;
 }
 .article_description{
     overflow: hidden;
@@ -68,15 +25,7 @@ section#headerImage{
     right: 200px;
 }
 section#headerImage img{
-    width:100%;
-}
-footer{
-    position: absolute;
-    bottom:0;
-    left:0;
-    width:100%;
-    height:50px;
-    background-color: #2e2d30;
+   /* width:100%;*/
 }
 
 div.tabs {
@@ -110,7 +59,6 @@ div.tabs {
  border-right:1px solid white;
 }
 
-
 section#headerImage img
 
 {
@@ -118,6 +66,6 @@ section#headerImage img
     -webkit-box-shadow: 0px 5px 25px -3px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 5px 25px -3px rgba(0,0,0,0.75);
     box-shadow: 0px 5px 25px -3px rgba(0,0,0,0.75);
-    border: 1px solid rgba(0,0,0,.5);
     border-top: 0px;
 }
+
