--- a/portal/assets/styles/article.css
+++ b/portal/assets/styles/article.css
@@ -10,12 +10,12 @@ article{
 section#headerImage{
     position: relative;
     top: 70px;
-    width: 50%;
     left: 0px;
 }
 .article_description{
     overflow: hidden;
     width: 80%;
+    padding-bottom: 50px;
 }
 
 .article_creationTimestamp{
@@ -23,9 +23,6 @@ section#headerImage{
     text-align: right;
     top: -44px;
     right: 200px;
-}
-section#headerImage img{
-   /* width:100%;*/
 }
 
 div.tabs {
@@ -67,5 +64,6 @@ section#headerImage img
     -moz-box-shadow: 0px 5px 25px -3px rgba(0,0,0,0.75);
     box-shadow: 0px 5px 25px -3px rgba(0,0,0,0.75);
     border-top: 0px;
+    margin:0px auto;
 }
 
