--- a/portal/assets/styles/article.css
+++ b/portal/assets/styles/article.css
@@ -102,3 +102,8 @@ div.nuuwsPrev
     box-shadow         : 0px 5px 15px 0.5px rgba(0, 0, 0, 0.75);
     border             : 1px solid rgba(0, 0, 0, .33);
 }
+
+div#articlesWrapper
+{
+    margin : -30px 0 0 0;
+}
