--- a/portal/assets/styles/article.css
+++ b/portal/assets/styles/article.css
@@ -36,6 +36,10 @@ div.tabs
     background-color : #2E2D30;
     padding          : 15px;
 }
+div.tabs.articleManagement{
+    text-align:center;
+    padding:15px 25px 15px 25px;
+}
 
 .tabs > a
 {
@@ -61,10 +65,7 @@ div.tabs
     -webkit-animation : fadeEffect 1s;
     animation         : fadeEffect 1s;
 }
-.tabMarker,
-#articleOption_create,
-#articleOption_search,
-#articleOption_change
+.tabMarker
 {
     border-right : 1px solid white;
 }
@@ -107,4 +108,7 @@ div.nuuwsPrev
 div#articlesWrapper
 {
     margin : -30px 0 0 0;
+}
+#articlesWrapper h1{
+    margin-bottom: 15px
 }
