--- a/portal/assets/styles/style.css
+++ b/portal/assets/styles/style.css
@@ -22,13 +22,11 @@ header > nav{
     height:30%;
 }
 header > nav ul{
+    width:70%;
     top: 7px;
-    width: 82%;
-    left:14%;
-    height: 30%;
+    left: -145px;
     position: absolute;
 }
-
 .navigation_list li{
     font-size:20px;
     color:#fff;
@@ -49,6 +47,11 @@ header > nav ul{
 }
 .tabLine{
     border-right: 1px solid white;
+}
+.nuuwsLogo{
+    width: 150px;
+    position: absolute;
+    left: 10px;
 }
 
 
