--- a/portal/assets/styles/article.css
+++ b/portal/assets/styles/article.css
@@ -73,14 +73,15 @@ div.tabs.articleManagement{
 section#headerImage img
 {
     display            : block;
-    -webkit-box-shadow : 0px 5px 25px -3px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow    : 0px 5px 25px -3px rgba(0, 0, 0, 0.75);
-    box-shadow         : 0px 5px 25px -3px rgba(0, 0, 0, 0.75);
     border-top         : 0px;
     margin             : 0px auto;
     max-width          : 100%;
 }
-
+section#headerImage img.shadow{
+    -webkit-box-shadow : 0px 5px 25px -3px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow    : 0px 5px 25px -3px rgba(0, 0, 0, 0.75);
+    box-shadow         : 0px 5px 25px -3px rgba(0, 0, 0, 0.75);
+}
 /*
  *  articles.tpl
  *
