--- a/portal/assets/styles/article.css
+++ b/portal/assets/styles/article.css
@@ -123,6 +123,59 @@ div#articlesWrapper
     }
 }
 
+@media only screen and (max-width: 865px) {
+    .navigation_list {
+        display: none;
+    }
+
+    .dropdown {
+        display: block;
+        position: absolute;
+        left: 25%;
+        width: 95px;
+        padding-top: 15px;
+        top: 0px;
+        height: 55px;
+    }
+    .dropdown{
+        background-position: 22px;
+        background-size: 50px;
+        background-repeat: no-repeat;
+        background-image: url("../images/Menuebutton.png")!important;
+    }
+    .dropdown label{
+        opacity: 0;
+    }
+    .dropdown ul{
+        padding-top: 47px;
+        z-index: 50;
+        left: -67px;
+        list-style: none;
+    }
+    .dropdown ul li a{
+        text-decoration: none;
+        color: white;
+    }
+    .dropdown ul li a:hover{
+        color:#c7d308;
+    }
+    .dropdown ul li{
+        width: 130px;
+        padding: 10px 10px 10px 10px;
+        background-color: #2e2d30;
+        color: white;
+    }
+}
+
+
+
+
+@media only screen and (min-width: 866px) {
+    .dropdown{
+        display:none;
+    }
+}
+
 aside.nuuwsSpecial img{
     width:600px;
     padding-top:10px;
@@ -172,6 +225,28 @@ aside.nuuwsSpecial img{
     top: 0px;
     left: 979px;
 }
+
+input#checkbox_toggle[type=checkbox]{
+    display: none;
+}
+input#checkbox_toggle[type=checkbox]:checked ~ ul {
+    display: block
+}
+.dropdown ul{
+    display: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
